--- a/PullaShop.Api/PullaShop.Api.csproj
+++ b/PullaShop.Api/PullaShop.Api.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>361cf6a7-a612-4e9e-92cf-5e6c94d35fff</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
